# narrativ

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/desktop/: generate_icons.sh  package.json  vite.config.js
apps/desktop/src/: App.css  App.jsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backend.rs  commands.rs  keychain.rs  main.rs  vault.rs
apps/desktop/src/components/: BoardsView.jsx  CollapsibleSection.jsx  ConfirmModal.jsx  CustomDropdown.jsx  Footer.jsx  GeneratingView.jsx  Lightbox.jsx  LoadingScreen.jsx  Navbar.jsx  ResearchPanel.jsx  ReviewMode.jsx  SettingsModal.jsx  Sidebar.jsx  StatusBar.jsx  StyleExtractor.jsx  StyleSelector.jsx  TrendingTopics.jsx  index.js
apps/desktop/src/hooks/: index.js  useAppInit.js  useBoards.js  useLocalStorage.js  useNotes.js  useProviders.js  useStoryGeneration.js
apps/desktop/src/pages/: Create.jsx  Gallery.jsx  Home.jsx  Settings.jsx  VaultSetup.jsx
apps/desktop/src/services/: api.js
apps/desktop/src/styles/: boards.css  buttons.css  dropdown.css  footer.css  gallery.css  generation.css  grid.css  home.css  layout.css  lightbox.css  loading-screen.css  navbar.css  note-content.css  notes-panel.css  research-panel.css  review.css  settings-modal.css  settings.css  sidebar.css  status-bar.css  style-selector.css  trending.css  vault-setup.css
apps/docs/: docusaurus.config.js  package.json  sidebars.js
apps/docs/blog/: 2025-01-01-introducing-narrativ.md  2025-01-01-introducing-revelio.md  authors.yml
apps/docs/docs/: intro.md
apps/docs/docs/api-reference/: endpoints.md
apps/docs/src/css/: custom.css
(+12 files in other folders)
