[package]
name = "revelio"
version = "1.1.0"
description = "AI-powered social media story creator"
authors = ["chaiovercode"]
license = "MIT"
repository = "https://github.com/chaiovercode/revelio"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "macos-private-api", "shell-open", "shell-execute", "shell-sidecar", "fs-all", "path-all", "dialog-all", "http-all", "process-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
chrono = "0.4"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
